[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ship/tie-figther48.png" type="Texture" id=1]
[ext_resource path="res://actor/enemy/tie.gd" type="Script" id=2]
[ext_resource path="res://actor/effect/white_flash.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 22 )

[node name="tie" type="Area2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="white_flash" parent="sprite" instance=ExtResource( 3 )]

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 32
one_shot = true
explosiveness = 0.8
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0

[node name="visibility" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_tie_area_entered"]
[connection signal="screen_exited" from="visibility" to="." method="_on_visibility_screen_exited"]
